--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
     "redis": "^5.8.2",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "superjson": "^2.2.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
